package com.design.behaviour.state;

/**
 * @ClassName: State
 * @Description: 状态抽象类
 * @Author yj
 * @Date 2023年06月12日
 */
public interface State {

	void playGame();

}
